objects/Business_Review__c.object
<CustomObject>
    <fields>
        <fullName>AM_Score__c</fullName>
        <label>AM Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Score__c</fullName>
        <label>Budget Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Review__c</fullName>
        <label>Date of Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_the_client__c</fullName>
        <label>Client has opted in for Business Review?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MRF_Score__c</fullName>
        <label>MRF Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <label>Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Please_provide_comments__c</fullName>
        <label>Please provide comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMM_Implementations__c</fullName>
        <label>SMM Implementations</label>
        <referenceTo>SMM_Implementations__c</referenceTo>
        <relationshipLabel>Business Review</relationshipLabel>
        <relationshipName>Business_Review</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sourcing_Score__c</fullName>
        <label>Sourcing Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_of_Review__c</fullName>
        <label>Year of Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Review</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Business Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Review</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Please_enter_comments</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Has_the_client__c,"No"),
Len(Please_provide_comments__c)=0
)</errorConditionFormula>
        <errorDisplayField>Please_provide_comments__c</errorDisplayField>
        <errorMessage>Please provide comments to let us know why the client didn't opt for Business Review!</errorMessage>
    </validationRules>
</CustomObject>